--- a/pkg/deployments/package.json
+++ b/pkg/deployments/package.json
@@ -43,6 +43,7 @@
     "@nomicfoundation/hardhat-network-helpers": "^1.0.6",
     "@nomiclabs/hardhat-ethers": "^2.2.1",
     "@nomiclabs/hardhat-etherscan": "^3.1.2",
+    "@nomiclabs/hardhat-vyper": "^3.0.3",
     "@solidity-parser/parser": "^0.14.5",
     "@types/lodash": "^4.14.186",
     "@types/lodash.range": "^3.2.7",
