--- a/pkg/deployments/package.json
+++ b/pkg/deployments/package.json
@@ -64,7 +64,8 @@
     "solhint": "^3.2.0",
     "solhint-plugin-prettier": "^0.0.4",
     "ts-node": "^10.9.1",
-    "typescript": "^4.0.2"
+    "typescript": "^4.0.2",
+    "zksync-web3": "^0.14.3"
   },
   "peerDependencies": {
     "@ethersproject/contracts": "^5.0.0",
