--- a/pkg/vault/package.json
+++ b/pkg/vault/package.json
@@ -19,6 +19,7 @@
   "scripts": {
     "build": "yarn compile",
     "compile": "hardhat compile && rm -rf artifacts/build-info",
+    "compile:zk": "hardhat compile --network zkTestnet",
     "compile:watch": "nodemon --ext sol --exec yarn compile",
     "lint": "yarn lint:solidity && yarn lint:typescript",
     "lint:solidity": "solhint 'contracts/**/*.sol'",
@@ -36,6 +37,9 @@
     "@balancer-labs/balancer-js": "workspace:*",
     "@balancer-labs/v2-common": "workspace:*",
     "@balancer-labs/v2-helpers": "workspace:*",
+    "@matterlabs/hardhat-zksync-deploy": "^0.6.3",
+    "@matterlabs/hardhat-zksync-solc": "^0.3.14",
+    "@matterlabs/hardhat-zksync-verify": "^0.1.4",
     "@nomiclabs/hardhat-ethers": "^2.2.1",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
     "@types/chai": "^4.3.3",
@@ -65,6 +69,7 @@
     "solhint": "^3.2.0",
     "solhint-plugin-prettier": "^0.0.4",
     "ts-node": "^10.9.1",
-    "typescript": "^4.0.2"
+    "typescript": "^4.0.2",
+    "zksync-web3": "^0.13.1"
   }
 }
