--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,6 +48,8 @@ jobs:
         run: yarn workspace @balancer-labs/v2-solidity-utils test
       - name: Install Foundry
         uses: onbjerg/foundry-toolchain@v1
+        with:
+          version: latest
       - name: Run Forge tests
         run: yarn workspace @balancer-labs/v2-solidity-utils test-fuzz
 
@@ -67,6 +69,8 @@ jobs:
         run: yarn workspace @balancer-labs/v2-standalone-utils test
       - name: Install Foundry
         uses: onbjerg/foundry-toolchain@v1
+        with:
+          version: latest
       - name: Run Forge tests
         run: yarn workspace @balancer-labs/v2-standalone-utils test-fuzz
 
@@ -86,6 +90,8 @@ jobs:
         run: yarn workspace @balancer-labs/v2-vault test
       - name: Install Foundry
         uses: onbjerg/foundry-toolchain@v1
+        with:
+          version: latest
       - name: Run Forge tests
         run: yarn workspace @balancer-labs/v2-vault test-fuzz
 
@@ -105,6 +111,8 @@ jobs:
         run: yarn workspace @balancer-labs/v2-pool-utils test
       - name: Install Foundry
         uses: onbjerg/foundry-toolchain@v1
+        with:
+          version: latest
       - name: Run Forge tests
         run: yarn workspace @balancer-labs/v2-pool-utils test-fuzz
 
@@ -124,6 +132,8 @@ jobs:
         run: yarn workspace @balancer-labs/v2-pool-weighted test
       - name: Install Foundry
         uses: onbjerg/foundry-toolchain@v1
+        with:
+          version: latest
       - name: Run Forge tests
         run: yarn workspace @balancer-labs/v2-pool-weighted test-fuzz
 
@@ -143,6 +153,8 @@ jobs:
         run: yarn workspace @balancer-labs/v2-pool-stable test
       - name: Install Foundry
         uses: onbjerg/foundry-toolchain@v1
+        with:
+          version: latest
       - name: Run Forge tests
         run: yarn workspace @balancer-labs/v2-pool-stable test-fuzz
 
@@ -162,6 +174,8 @@ jobs:
         run: yarn workspace @balancer-labs/v2-pool-linear test
       - name: Install Foundry
         uses: onbjerg/foundry-toolchain@v1
+        with:
+          version: latest
       - name: Run Forge tests
         run: yarn workspace @balancer-labs/v2-pool-linear test-fuzz
 
@@ -181,6 +195,8 @@ jobs:
         run: yarn workspace @balancer-labs/v2-liquidity-mining test
       - name: Install Foundry
         uses: onbjerg/foundry-toolchain@v1
+        with:
+          version: latest
       - name: Run Forge tests
         run: yarn workspace @balancer-labs/v2-liquidity-mining test-fuzz
 
