--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,7 +47,10 @@ jobs:
       - name: Test
         run: yarn workspace @balancer-labs/v2-solidity-utils test
       - name: Install Foundry
-        uses: foundry-rs/foundry-toolchain/releases/tag/v1.0.7
+        uses: foundry-rs/foundry-toolchain@v1
+        with:
+          cache: false
+
       - name: Run Forge tests
         run: yarn workspace @balancer-labs/v2-solidity-utils test-fuzz
 
@@ -66,7 +69,10 @@ jobs:
       - name: Test
         run: yarn workspace @balancer-labs/v2-standalone-utils test
       - name: Install Foundry
-        uses: foundry-rs/foundry-toolchain/releases/tag/v1.0.7
+        uses: foundry-rs/foundry-toolchain@v1
+        with:
+          cache: false
+
       - name: Run Forge tests
         run: yarn workspace @balancer-labs/v2-standalone-utils test-fuzz
 
@@ -85,7 +91,10 @@ jobs:
       - name: Test
         run: yarn workspace @balancer-labs/v2-vault test
       - name: Install Foundry
-        uses: foundry-rs/foundry-toolchain/releases/tag/v1.0.7
+        uses: foundry-rs/foundry-toolchain@v1
+        with:
+          cache: false
+
       - name: Run Forge tests
         run: yarn workspace @balancer-labs/v2-vault test-fuzz
 
@@ -104,7 +113,10 @@ jobs:
       - name: Test
         run: yarn workspace @balancer-labs/v2-pool-utils test
       - name: Install Foundry
-        uses: foundry-rs/foundry-toolchain/releases/tag/v1.0.7
+        uses: foundry-rs/foundry-toolchain@v1
+        with:
+          cache: false
+
       - name: Run Forge tests
         run: yarn workspace @balancer-labs/v2-pool-utils test-fuzz
 
@@ -123,7 +135,10 @@ jobs:
       - name: Test
         run: yarn workspace @balancer-labs/v2-pool-weighted test
       - name: Install Foundry
-        uses: foundry-rs/foundry-toolchain/releases/tag/v1.0.7
+        uses: foundry-rs/foundry-toolchain@v1
+        with:
+          cache: false
+
       - name: Run Forge tests
         run: yarn workspace @balancer-labs/v2-pool-weighted test-fuzz
 
@@ -142,7 +157,9 @@ jobs:
       - name: Test
         run: yarn workspace @balancer-labs/v2-pool-stable test
       - name: Install Foundry
-        uses: foundry-rs/foundry-toolchain/releases/tag/v1.0.7
+        uses: foundry-rs/foundry-toolchain@v1
+        with:
+          cache: false
       - name: Run Forge tests
         run: yarn workspace @balancer-labs/v2-pool-stable test-fuzz
 
@@ -161,7 +178,10 @@ jobs:
       - name: Test
         run: yarn workspace @balancer-labs/v2-pool-linear test
       - name: Install Foundry
-        uses: foundry-rs/foundry-toolchain/releases/tag/v1.0.7
+        uses: foundry-rs/foundry-toolchain@v1
+        with:
+          cache: false
+
       - name: Run Forge tests
         run: yarn workspace @balancer-labs/v2-pool-linear test-fuzz
 
@@ -180,7 +200,10 @@ jobs:
       - name: Test
         run: yarn workspace @balancer-labs/v2-liquidity-mining test
       - name: Install Foundry
-        uses: foundry-rs/foundry-toolchain/releases/tag/v1.0.7
+        uses: foundry-rs/foundry-toolchain@v1
+        with:
+          cache: false
+
       - name: Run Forge tests
         run: yarn workspace @balancer-labs/v2-liquidity-mining test-fuzz
 
