--- a/pvt/helpers/package.json
+++ b/pvt/helpers/package.json
@@ -23,6 +23,7 @@
     "typescript": "^4.0.2"
   },
   "devDependencies": {
+    "@balancer-labs/balancer-js": "workspace:*",
     "@typescript-eslint/eslint-plugin": "^5.41.0",
     "@typescript-eslint/parser": "^5.41.0",
     "eslint": "^8.26.0",
