--- a/.github/workflows/deployment-checks.yml
+++ b/.github/workflows/deployment-checks.yml
@@ -67,6 +67,29 @@ jobs:
       - name: Check Action IDs
         run: yarn workspace @balancer-labs/v2-deployments check-action-ids
 
+  check-address-lookup:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Set up environment
+        uses: ./.github/actions/setup
+      - name: Compile balancer-js
+        run: yarn workspace @balancer-labs/balancer-js build
+      - name: Prepare Config
+        run: yarn workspace @balancer-labs/v2-deployments ci:prepare-config
+        env:
+          MAINNET_RPC_ENDPOINT: ${{ secrets.MAINNET_INFURA_ENDPOINT }}
+          POLYGON_RPC_ENDPOINT: ${{ secrets.POLYGON_INFURA_ENDPOINT }}
+          ARBITRUM_RPC_ENDPOINT: ${{ secrets.ARBITRUM_INFURA_ENDPOINT }}
+          OPTIMISM_RPC_ENDPOINT: ${{ secrets.OPTIMISM_INFURA_ENDPOINT }}
+          BINANCE_RPC_ENDPOINT: ${{ secrets.BINANCE_INFURA_ENDPOINT }}
+          GNOSIS_RPC_ENDPOINT: ${{ secrets.GNOSIS_INFURA_ENDPOINT }}
+          AVALANCHE_RPC_ENDPOINT: ${{ secrets.AVALANCHE_INFURA_ENDPOINT }}
+          GOERLI_RPC_ENDPOINT: ${{ secrets.GOERLI_INFURA_ENDPOINT }}
+          SEPOLIA_RPC_ENDPOINT: ${{ secrets.SEPOLIA_INFURA_ENDPOINT }}
+      - name: Check Deployment Address Lookup File
+        run: yarn workspace @balancer-labs/v2-deployments check-address-lookup
+
   markdown-link-check:
     runs-on: ubuntu-latest
     steps:
