--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,6 +50,7 @@ jobs:
         uses: foundry-rs/foundry-toolchain@v1
       - name: Run Forge tests
         run: yarn workspace @balancer-labs/v2-solidity-utils test-fuzz
+        continue-on-error: true
 
   test-standalone-utils:
     runs-on: ubuntu-latest
@@ -69,6 +70,7 @@ jobs:
         uses: foundry-rs/foundry-toolchain@v1
       - name: Run Forge tests
         run: yarn workspace @balancer-labs/v2-standalone-utils test-fuzz
+        continue-on-error: true
 
   test-vault:
     runs-on: ubuntu-latest
@@ -88,6 +90,7 @@ jobs:
         uses: foundry-rs/foundry-toolchain@v1
       - name: Run Forge tests
         run: yarn workspace @balancer-labs/v2-vault test-fuzz
+        continue-on-error: true
 
   test-pool-utils:
     runs-on: ubuntu-latest
@@ -107,6 +110,7 @@ jobs:
         uses: foundry-rs/foundry-toolchain@v1
       - name: Run Forge tests
         run: yarn workspace @balancer-labs/v2-pool-utils test-fuzz
+        continue-on-error: true
 
   test-pool-weighted:
     runs-on: ubuntu-latest
@@ -126,6 +130,7 @@ jobs:
         uses: foundry-rs/foundry-toolchain@v1
       - name: Run Forge tests
         run: yarn workspace @balancer-labs/v2-pool-weighted test-fuzz
+        continue-on-error: true
 
   test-pool-stable:
     runs-on: ubuntu-latest
@@ -145,6 +150,7 @@ jobs:
         uses: foundry-rs/foundry-toolchain@v1
       - name: Run Forge tests
         run: yarn workspace @balancer-labs/v2-pool-stable test-fuzz
+        continue-on-error: true
 
   test-pool-linear:
     runs-on: ubuntu-latest
@@ -164,6 +170,7 @@ jobs:
         uses: foundry-rs/foundry-toolchain@v1
       - name: Run Forge tests
         run: yarn workspace @balancer-labs/v2-pool-linear test-fuzz
+        continue-on-error: true
 
   test-liquidity-mining:
     runs-on: ubuntu-latest
@@ -183,10 +190,11 @@ jobs:
         uses: foundry-rs/foundry-toolchain@v1
       - name: Install Vyper
         run: |
-          pip3 install vyper==0.3.3
+          pip3 install vyper
           vyper --version
       - name: Run Forge tests
         run: yarn workspace @balancer-labs/v2-liquidity-mining test-fuzz
+        continue-on-error: true
 
   test-governance-scripts:
     runs-on: ubuntu-latest
