--- a/pkg/liquidity-mining/package.json
+++ b/pkg/liquidity-mining/package.json
@@ -29,6 +29,7 @@
     "test-fuzz": "forge test"
   },
   "devDependencies": {
+    "@balancer-labs/solidity-toolbox": "workspace:*",
     "@balancer-labs/v2-common": "workspace:*",
     "@balancer-labs/v2-helpers": "workspace:*",
     "@balancer-labs/v2-interfaces": "workspace:*",
