--- a/pkg/pool-utils/package.json
+++ b/pkg/pool-utils/package.json
@@ -33,6 +33,7 @@
     "@balancer-labs/v2-solidity-utils": "workspace:*"
   },
   "devDependencies": {
+    "@balancer-labs/solidity-toolbox": "workspace:*",
     "@balancer-labs/v2-common": "workspace:*",
     "@balancer-labs/v2-helpers": "workspace:*",
     "@balancer-labs/v2-vault": "workspace:*",
