--- a/pkg/pool-weighted/package.json
+++ b/pkg/pool-weighted/package.json
@@ -30,6 +30,7 @@
   },
   "devDependencies": {
     "@balancer-labs/balancer-js": "workspace:*",
+    "@balancer-labs/solidity-toolbox": "workspace:*",
     "@balancer-labs/v2-common": "workspace:*",
     "@balancer-labs/v2-helpers": "workspace:*",
     "@balancer-labs/v2-interfaces": "workspace:*",
