--- a/pkg/solidity-utils/package.json
+++ b/pkg/solidity-utils/package.json
@@ -32,6 +32,7 @@
   },
   "devDependencies": {
     "@balancer-labs/balancer-js": "workspace:*",
+    "@balancer-labs/solidity-toolbox": "workspace:*",
     "@balancer-labs/v2-common": "workspace:*",
     "@balancer-labs/v2-helpers": "workspace:*",
     "@nomiclabs/hardhat-ethers": "^2.2.1",
