--- a/pvt/solidity-toolbox/package.json
+++ b/pvt/solidity-toolbox/package.json
@@ -8,6 +8,7 @@
     "forge-std": "https://github.com/foundry-rs/forge-std.git#v1.9.7"
   },
   "scripts": {
-    "postinstall": "mkdir -p ../../node_modules/forge-std/lib/ && cd ../../node_modules/forge-std/lib/ && ln -s ../../ds-test/ ds-test"
+    "postinstall": "mkdir -p ../../node_modules/forge-std/lib/ && cd ../../node_modules/forge-std/lib/ && ln -s ../../ds-test/ ds-test",
+    "forge:test": "forge test -vvv || (echo 'No Foundry tests found - skipping' && exit 0)"
   }
 }
