--- a/pkg/standalone-utils/package.json
+++ b/pkg/standalone-utils/package.json
@@ -26,7 +26,7 @@
     "test": "yarn compile && mocha --extension ts --require hardhat/register --require @balancer-labs/v2-common/setupTests --recursive --exit",
     "test:fast": "yarn compile && mocha --extension ts --require hardhat/register --require @balancer-labs/v2-common/setupTests --recursive --parallel --exit",
     "test:watch": "nodemon --ext js,ts --watch test --watch lib --exec 'clear && yarn test --no-compile'",
-    "test-fuzz": "forge test"
+    "test:forge": "forge test -vvv"
   },
   "devDependencies": {
     "@balancer-labs/balancer-js": "workspace:*",
