--- a/pkg/vault/package.json
+++ b/pkg/vault/package.json
@@ -36,6 +36,7 @@
     "@balancer-labs/balancer-js": "workspace:*",
     "@balancer-labs/v2-common": "workspace:*",
     "@balancer-labs/v2-helpers": "workspace:*",
+    "@matterlabs/hardhat-zksync": "^0.3.0",
     "@nomiclabs/hardhat-ethers": "^2.2.1",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
     "@types/chai": "^4.3.3",
@@ -51,7 +52,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "ethereum-waffle": "^3.4.4",
     "ethers": "^5.7.2",
-    "hardhat": "^2.12.5",
+    "hardhat": "^2.18.0",
     "hardhat-ignore-warnings": "^0.2.4",
     "lodash.frompairs": "^4.0.1",
     "lodash.pick": "^4.4.0",
@@ -65,6 +66,7 @@
     "solhint": "^3.2.0",
     "solhint-plugin-prettier": "^0.0.4",
     "ts-node": "^10.9.1",
-    "typescript": "^4.0.2"
+    "typescript": "^4.0.2",
+    "zksync-ethers": "^5.11.0"
   }
 }
